--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "todo-app_react",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "7.0.1",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.1",
-    "wouter": "^2.8.0-alpha.1"
+    "styled-components": "5.3.1",
+    "wouter": "2.8.0-alpha.1"
   },
   "scripts": {
     "start": "react-scripts start",
